tugas1: add model, html, css, js

--- a/sipil/src/main/resources/application.properties
+++ b/sipil/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#Konfigurasi untuk koneksi MySql
+spring.datasource.platform=mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#Menyesuaikan nama_database dengan database anda
+spring.datasource.url=jdbc:mysql://localhost:3306/sipil?useSSL=false&serverTimezone=Asia/Jakarta
+
+#Sesuaikan dengan nama dan password mysql anda
+spring.datasource.username=root
+spring.datasource.password=
+
+#optimize query for db MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+#Pembuatan database (create || create drop || validate || update)
+spring.jpa.hibernate.ddl-auto=create
