tugas1 : add controller, service, html progress

--- a/sipil/src/main/resources/application.properties
+++ b/sipil/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #Pembuatan database (create || create drop || validate || update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto= update
